--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,9 @@
         <img class="page__logo" src="images/logo.png" alt="HHRC Logo">
         <h1 class="h2">Welcome to the Homeless and Housing Resource Center (HHRC)</h1>
         <div class="short-rule"></div>
-        <p class="type-large type-dense">Providing high-quality, no-cost training for health and housing professionals in evidenced-based practices that contribute to housing stability, recovery, and an end to homelessness. </p>
+        <p class="type-large type-dense">
+          Providing high-quality, no-cost training for health and housing professionals in evidence-based practices that contributes to housing stability, recovery, and an end to homelessness.
+        </p>
       </div>
     </header>
     <main>
