--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Homeless and Housing Resource Center (HHRC)</title>
     <meta name="description" content="Providing high-quality, no-cost training for health and housing professionals in evidenced-based practices that contribute to housing stability, recovery, and an end to homelessness.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="favicon.ico?v=1" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@900&family=Source+Sans+Pro:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
