Added webinar section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="shortcut icon" href="favicon.ico?v=1" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@900&family=Source+Sans+Pro:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Source+Sans+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
   </head>
   <body class="page">
     <header class="page__intro section">
@@ -65,6 +66,42 @@
                   For general questions, please email us at: <a target="_blank" href="mailto:info@hhrctraining.org">info@hhrctraining.org</a>
                 </p>
               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="webinar section">
+        <div class="webinar__content section__content section-icon">
+          <img class="section-icon__image" src="images/webinar-icon.svg" alt="Graphic of a play button">
+          <div data-grid="columns: 12">
+            <div data-grid-item="width: 8">
+              <div class="webinar__description">
+                <h2 class="headline-label">Upcoming Webinar</h2>
+                <a class="webinar__title h3" href="https://praincevents.webex.com/praincevents/onstage/g.php?MTID=e8de141f0d6d28b6d3d5b5c449c1edfeb." target="_blank">
+                  Eviction Prevention and Housing Retention During and After COVID-19
+                </a>
+                <p>
+                  <strong class="type-large">December 16, 3:00-4:30pm ET</strong>
+                </p>
+                <p>
+                  The COVID-19 pandemic has led to economic hardship and housing instability for millions of Americans. With eviction moratoria expected to expire at the end of 2020, individuals and families are at risk of losing their housing. Join SAMHSA’s new Homeless and Housing Resource Center to explore strategies for eviction prevention and housing retention. Participants will hear from U.S. Department of Veterans Affairs (VA) leadership, an experienced housing attorney, and local Continuum of Care (CoC) leadership about implementing data-informed, targeted prevention efforts that prioritize racial equity and will learn strategies that can be implemented now to prevent future housing instability when the moratoria expire.
+                </p>
+              </div>
+            </div>
+            <div data-grid-item="width: 4">
+              <h3 class="webinar__aside-headline h5"><b>Speakers</b></h3>
+              <ul>
+                <li>John Kuhn, SSVF National Director, U.S. Department of Veterans Affairs</li>
+                <li>Larry McDonough, Attorney at Law and Adjunct Professor of Law, Senior Minnesota Counsel, National Anti-Eviction Project, Lawyers' Committee for Civil Rights Under Law</li>
+                <li>Randy McCoy, Executive Director of Metro Area Continuum of Care for the Homeless (MACCH), Omaha, Nebraska</li>
+              </ul>
+              <h3 class="rule h5">Webinar Registration</h3>
+              <p>Sign up to the HHRC listserv to be the first to hear about new trainings and resources!</p>
+              <p>
+                <a class="button" href="https://praincevents.webex.com/praincevents/onstage/g.php?MTID=e8de141f0d6d28b6d3d5b5c449c1edfeb." target="_blank">
+                  Register
+                </a>
+              </p>
             </div>
           </div>
         </div>
