--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div data-grid-item="width: 8">
               <div class="webinar__description">
                 <h2 class="headline-label">Upcoming Webinar</h2>
-                <a class="webinar__title h3" href="https://praincevents.webex.com/praincevents/onstage/g.php?MTID=e8de141f0d6d28b6d3d5b5c449c1edfeb." target="_blank">
+                <a class="webinar__title h3" href="https://praincevents.webex.com/praincevents/onstage/g.php?MTID=e8de141f0d6d28b6d3d5b5c449c1edfeb" target="_blank">
                   Eviction Prevention and Housing Retention During and After COVID-19
                 </a>
                 <p>
@@ -98,7 +98,7 @@
               <h3 class="rule h5">Webinar Registration</h3>
               <p>Sign up to the HHRC listserv to be the first to hear about new trainings and resources!</p>
               <p>
-                <a class="button" href="https://praincevents.webex.com/praincevents/onstage/g.php?MTID=e8de141f0d6d28b6d3d5b5c449c1edfeb." target="_blank">
+                <a class="button" href="https://praincevents.webex.com/praincevents/onstage/g.php?MTID=e8de141f0d6d28b6d3d5b5c449c1edfeb" target="_blank">
                   Register
                 </a>
               </p>
