Add zip download webinar area

--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
                 <p>
                   The COVID-19 pandemic has led to economic hardship and housing instability for millions of Americans. With eviction moratoria expected to expire at the end of 2020, individuals and families are at risk of losing their housing. Join SAMHSA’s new Homeless and Housing Resource Center to explore strategies for eviction prevention and housing retention. Participants will hear from U.S. Department of Veterans Affairs (VA) leadership, an experienced housing attorney, and local Continuum of Care (CoC) leadership about implementing data-informed, targeted prevention efforts that prioritize racial equity and will learn strategies that can be implemented now to prevent future housing instability when the moratoria expire.
                 </p>
+                <p>
+                  <a class="button" href="files/hhrc-webinar-for-informatics.zip" target="_blank" download="HHRC Webinar for Informatics.zip">Download Resources</a>
+                </p>
               </div>
             </div>
             <div data-grid-item="width: 4">
