--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </header>    <main>
       <div class="page__anchors section">
   <div class="section__content">
-    <div data-grid="columns: 12">
+    <div data-grid="columns: 12; gutters-row: true">
       <div data-grid-item="width: 4">
         <div class="card card--in-grid">
           <div class="card__body wysiwyg">
@@ -171,7 +171,7 @@
     </div>
   </div>
 </div>      <div class="our-work" id="our-work">
-  <div class="our-work__header section section--fit">
+  <div class="our-work__header section">
     <div class="section__content type-center">
       <h2 class="h2 h2--colored">Our Work</h2>
       <div class="short-rule short-rule--large-gap"></div>
