--- a/index.html
+++ b/index.html
@@ -178,20 +178,20 @@
     </div>
   </div>
   <div class="our-work__tabs-list-wrap tabs section section--fit">
-    <div class="tabs__list our-work__tabs-list section__content">
-      <button class="tabs__toggle" aria-selected="true">
+    <div class="tabs__list our-work__tabs-list section__content" role="tablist">
+      <button class="tabs__toggle" aria-selected="true" aria-controls="tabpanel-webinars">
         <img class="graphic-icon" src="images/icon-webinar.svg" alt="" role="presentation">
         Webinars
       </button>
-      <button class="tabs__toggle" >
+      <button class="tabs__toggle" aria-controls="tabpanel-toolkits" disabled>
         <img class="graphic-icon" src="images/icon-toolkit.svg" alt="" role="presentation">
         Toolkits
       </button>
-      <button class="tabs__toggle" >
+      <button class="tabs__toggle" aria-controls="tabpanel-newsletters" disabled>
         <img class="graphic-icon" src="images/icon-newsletter.svg" alt="" role="presentation">
         Newsletters
       </button>
-      <button class="tabs__toggle" disabled>
+      <button class="tabs__toggle" aria-controls="tabpanel-articles" disabled>
         <img class="graphic-icon" src="images/icon-article.svg" alt="" role="presentation">
         Articles
       </button>
@@ -199,7 +199,7 @@
   </div>
   <div class="our-work__tabs-panels-wrap section section--fit ">
     <div class="tabs__panels section__content">
-      <div class="tabs__panel">
+      <div class="tabs__panel" id="tabpanel-webinars" role="tabpanel">
         <ul class="webinar-list reset-list" data-grid="columns: 12; gutters-row: true">
       <li class="webinar-list__item" data-grid-item="width: 4;">
       <div class="card card--in-grid">
@@ -256,13 +256,13 @@
       </div>
     </li>
   </ul>      </div>
-      <div class="tabs__panel">
+      <div class="tabs__panel" id="tabpanel-toolkits" role="tabpanel">
         <!-- No Content -->
       </div>
-      <div class="tabs__panel">
+      <div class="tabs__panel" id="tabpanel-newsletters" role="tabpanel">
         <!-- No Content -->
       </div>
-      <div class="tabs__panel">
+      <div class="tabs__panel" id="tabpanel-articles" role="tabpanel">
         <!-- No Content -->
       </div>
     </div>
@@ -314,5 +314,6 @@
       </div>
     </div>
   </div>
-</footer>  </body>
+</footer>    <script src="js/scripts.js" type="text/javascript"></script>
+  </body>
 </html>
