--- a/index.html
+++ b/index.html
@@ -160,8 +160,112 @@
       </div>
     </div>
   </div>
-</div>      
-      <div class="page__highlight section">
+</div>      <div class="section" id="join-us">
+  <div class="section__content">
+    <div class="type-center">
+      <h2 class="h2 h2--colored">Join Us</h2>
+      <div class="short-rule short-rule--large-gap"></div>
+    </div>
+    <div data-grid="columns: 12; gutters-row: true;">
+      <div data-grid-item="width: 8">
+        <div class="page__padded-body" style="max-width: none">
+          <div class="card">
+            
+
+            <iframe
+              id="JotFormIFrame-203574564803155"
+              title="HHRC Contact Form"
+              allowtransparency="true"
+              allowfullscreen="true"
+              allow="geolocation; microphone; camera"
+              src="https://form.jotform.com/203574564803155?nojump"
+              frameborder="0"
+              style="
+              min-width: 100%;
+              height:539px;
+              border:none;"
+              scrolling="no"
+            >
+            </iframe>
+            <script type="text/javascript">
+              var ifr = document.getElementById("JotFormIFrame-203574564803155");
+              if (ifr) {
+                var src = ifr.src;
+                var iframeParams = [];
+                if (window.location.href && window.location.href.indexOf("?") > -1) {
+                  iframeParams = iframeParams.concat(window.location.href.substr(window.location.href.indexOf("?") + 1).split('&'));
+                }
+                if (src && src.indexOf("?") > -1) {
+                  iframeParams = iframeParams.concat(src.substr(src.indexOf("?") + 1).split("&"));
+                  src = src.substr(0, src.indexOf("?"))
+                }
+                iframeParams.push("isIframeEmbed=1");
+                ifr.src = src + "?" + iframeParams.join('&');
+              }
+              window.handleIFrameMessage = function(e) {
+                if (typeof e.data === 'object') { return; }
+                var args = e.data.split(":");
+                if (args.length > 2) { iframe = document.getElementById("JotFormIFrame-" + args[(args.length - 1)]); } else { iframe = document.getElementById("JotFormIFrame"); }
+                if (!iframe) { return; }
+                switch (args[0]) {
+                  case "scrollIntoView":
+                    iframe.scrollIntoView();
+                    break;
+                  case "setHeight":
+                    iframe.style.height = args[1] + "px";
+                    break;
+                  case "collapseErrorPage":
+                    if (iframe.clientHeight > window.innerHeight) {
+                      iframe.style.height = window.innerHeight + "px";
+                    }
+                    break;
+                  case "reloadPage":
+                    window.location.reload();
+                    break;
+                  case "loadScript":
+                    var src = args[1];
+                    if (args.length > 3) {
+                        src = args[1] + ':' + args[2];
+                    }
+                    var script = document.createElement('script');
+                    script.src = src;
+                    script.type = 'text/javascript';
+                    document.body.appendChild(script);
+                    break;
+                  case "exitFullscreen":
+                    if      (window.document.exitFullscreen)        window.document.exitFullscreen();
+                    else if (window.document.mozCancelFullScreen)   window.document.mozCancelFullScreen();
+                    else if (window.document.mozCancelFullscreen)   window.document.mozCancelFullScreen();
+                    else if (window.document.webkitExitFullscreen)  window.document.webkitExitFullscreen();
+                    else if (window.document.msExitFullscreen)      window.document.msExitFullscreen();
+                    break;
+                }
+                var isJotForm = (e.origin.indexOf("jotform") > -1) ? true : false;
+                if(isJotForm && "contentWindow" in iframe && "postMessage" in iframe.contentWindow) {
+                  var urls = {"docurl":encodeURIComponent(document.URL),"referrer":encodeURIComponent(document.referrer)};
+                  iframe.contentWindow.postMessage(JSON.stringify({"type":"urls","value":urls}), "*");
+                }
+              };
+              if (window.addEventListener) {
+                window.addEventListener("message", handleIFrameMessage, false);
+              } else if (window.attachEvent) {
+                window.attachEvent("onmessage", handleIFrameMessage);
+              }
+              </script>
+          </div>
+        </div>
+      </div>
+      <div data-grid-item="width: 4">
+        <h3 class="h5">
+          HHRC <span class="type-upper">Listserv</span>
+        </h3>
+        <p>Sign up to the HHRC listserv to be the first to hear about new trainings and resources!</p>
+<p>
+  <a class="button" href="https://signup.e2ma.net/signup/1931256/1922613/" target="_blank">Sign Up</a>
+</p>      </div>
+    </div>
+  </div>
+</div>      <div class="page__highlight section">
   <img class="page__highlight-logo" src="images/logo-icon-only.png" alt="HHRC Logo Icon">
   <div class="section__content">
     <p class="h3 type-max-width">
