--- a/index.html
+++ b/index.html
@@ -78,8 +78,45 @@
     </div>
   </div>
 </div>      
-      
-      <div class="our-work" id="our-work">
+      <div class="webinar section">
+  <div class="webinar__content section__content section-icon">
+    <img class="section-icon__image" src="images/icon-webinar.svg" role="presentation" alt="">
+    <div data-grid="columns: 12">
+      <div data-grid-item="width: 8">
+        <div class="webinar__description page__padded-body">
+          <h2 class="headline-label">Upcoming Webinar</h2>
+          <a class="webinar__title h3" href="https://praincevents.webex.com/praincevents/onstage/g.php?MTID=e8de141f0d6d28b6d3d5b5c449c1edfeb" target="_blank">
+            Supporting the Mental Health and Treatment Needs of Individuals Experiencing Homelessness During COVID-19
+          </a>
+          <p>
+            <strong class="type-large">March 25, 3:30-5:00pm ET</strong>
+          </p>
+          <p>
+            Throughout the COVID-19 pandemic there has been an increase in mental health and substance use disorders in the United States. Join SAMHSA’s Homeless and Housing Resource Center in exploring equitable and culturally appropriate interventions to engage people experiencing homelessness in treatment and deliver services in non-congregate settings. Participants will hear from the Colorado Coalition for the Homeless and Central City Concern about the creative methods they have used during the pandemic. Participants will also learn self-care strategies from the National Council for Behavioral Health to avoid burnout during and after the pandemic.  
+          </p>
+          <p>
+            <em>The National Council for Behavioral Health and National Health Care for the Homeless Council contributed to the development of this webinar. </em>
+          </p>
+          
+        </div>
+      </div>
+      <div class="wysiwyg" data-grid-item="width: 4">
+        <h3 class="webinar__aside-headline h5"><b>Speakers</b></h3>
+        <ul>
+          <li>Dave Iverson, MD, Director of Psychiatry, Colorado Coalition for the Homeless, Denver, Colorado</li>
+          <li>Eowyn Rieke, MD, MPH, Blackburn Medical Director, in conversation with Walter Bailey, Peer Counselor at the Imani Center, Central City Concern, Portland, Oregon</li>
+          <li>Laura Leone, DSW, MSSW, LMSW, Integrated Health Consultant, National Council for Behavioral Health</li>
+        </ul>
+        <h3 class="rule h5">Webinar Registration</h3>
+        <p>
+          <a class="button" href="https://prainc.zoom.us/webinar/register/WN_Ghj87o4ITTmGPG1pvnwhFA" target="_blank">
+            Register Now
+          </a>
+        </p>
+      </div>
+    </div>
+  </div>
+</div>      <div class="our-work" id="our-work">
   <div class="our-work__header section">
     <div class="section__content type-center">
       <h2 class="h2 h2--colored">Our Work</h2>
