--- a/index.html
+++ b/index.html
@@ -97,7 +97,9 @@
           <p>
             <em>The National Council for Behavioral Health and National Health Care for the Homeless Council contributed to the development of this webinar. </em>
           </p>
-          
+          <p>
+            <a class="button" href="files/hhrc-march-2021.zip" target="_blank" download="HHRC Webinar - March 2021.zip">Download Resources</a>
+          </p>
         </div>
       </div>
       <div class="wysiwyg" data-grid-item="width: 4">
