--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
             According to HUD’s Annual Homeless Assessment Report (AHAR), over 225,000 people experienced unsheltered homelessness on a single night in 2020. Of those individuals, twenty-five percent self-reported having a serious mental illness or chronic substance use condition. Join SAMHSA’s Homeless and Housing Resource Center as our panelists explore the benefits of incorporating mobile psychiatry with street outreach. Participants will learn about the street medicine model and the importance of utilizing a multi-disciplinary team to strengthen continuity of care and housing stability for the unsheltered population.
           </p>
           
+          <p>
+            <a class="button" href="files/06-2021-webinar-materials.zip" target="_blank" download>Download Resources</a>
+          </p>
         </div>
       </div>
       <div class="wysiwyg" data-grid-item="width: 4">
