Add upcoming webinar

--- a/index.html
+++ b/index.html
@@ -78,8 +78,42 @@
     </div>
   </div>
 </div>      
-      
-      <div class="our-work" id="our-work">
+      <div class="webinar section">
+  <div class="webinar__content section__content section-icon">
+    <img class="section-icon__image" src="images/icon-webinar.svg" role="presentation" alt="">
+    <div data-grid="columns: 12">
+      <div data-grid-item="width: 8">
+        <div class="webinar__description page__padded-body">
+          <h2 class="headline-label">Upcoming Webinar</h2>
+          <a class="webinar__title h3" href="https://prainc.zoom.us/webinar/register/WN_dcgcQEYHRWuNawefEMAoWA" target="_blank">
+            <strong>Taking a Trauma-Informed Approach with Events of Escalation</strong>
+          </a>
+          <p>
+            <strong class="type-large">July 29, 3:00-4:30pm ET</strong>
+          </p>
+          <p>
+            Among individuals experiencing homelessness, there is a high prevalence of complex trauma, chronic health conditions, and serious mental illness. Trauma, compounded with acute health conditions, often impacts an individual’s ability to manage their distress. Join SAMHSA’s Homeless and Housing Resource Center as our panelists explore using trauma-informed, compassionate, and respectful de-escalation techniques when aiding participants and staff during and after events of escalation.
+          </p>
+          
+        </div>
+      </div>
+      <div class="wysiwyg" data-grid-item="width: 4">
+        <h3 class="webinar__aside-headline h5"><b>Speakers</b></h3>
+        <ul>
+          <li>Mari Aceves, ED.D, DSW, BCBA, Consultant, National Council for Mental Wellbeing</li>
+          <li>Laura Leone, DSW, MSSW, LMSW, Consultant, National Council for Mental Wellbeing</li>
+          <li>Panel discussion with peers and persons with lived expertise</li>
+        </ul>
+        <h3 class="rule h5">Webinar Registration</h3>
+        <p>
+          <a class="button" href="https://prainc.zoom.us/webinar/register/WN_dNKoh4oLQwGvR39IYW7KDQ" target="_blank">
+            Register Now
+          </a>
+        </p>
+      </div>
+    </div>
+  </div>
+</div>      <div class="our-work" id="our-work">
   <div class="our-work__header section">
     <div class="section__content type-center">
       <h2 class="h2 h2--colored">Our Work</h2>
