Add upcoming webinar resources

--- a/index.html
+++ b/index.html
@@ -94,7 +94,9 @@
           <p>
             Among individuals experiencing homelessness, there is a high prevalence of complex trauma, chronic health conditions, and serious mental illness. Trauma, compounded with acute health conditions, often impacts an individual’s ability to manage their distress. Join SAMHSA’s Homeless and Housing Resource Center as our panelists explore using trauma-informed, compassionate, and respectful de-escalation techniques when aiding participants and staff during and after events of escalation.
           </p>
-          
+          <p>
+            <a class="button" href="files/july-2021-webinar-materials.zip" target="_blank" download>Download Resources</a>
+          </p>
         </div>
       </div>
       <div class="wysiwyg" data-grid-item="width: 4">
