Add toolkit, theme and setup toolkits view (was disabled empty)

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <img class="graphic-icon" src="images/icon-webinar.svg" alt="" role="presentation">
         Webinars
       </button>
-      <button class="tabs__toggle" aria-controls="tabpanel-toolkits" disabled>
+      <button class="tabs__toggle" aria-controls="tabpanel-toolkits">
         <img class="graphic-icon" src="images/icon-toolkit.svg" alt="" role="presentation">
         Toolkits
       </button>
@@ -109,14 +109,14 @@
   <div class="our-work__tabs-panels-wrap section section--fit ">
     <div class="tabs__panels section__content">
       <div class="tabs__panel" id="tabpanel-webinars" role="tabpanel">
-        <ul class="webinar-list reset-list" data-grid="columns: 12; gutters-row: true">
-              <li class="webinar-list__item" data-grid-item="width: 4;">
+        <ul class="resource-list reset-list" data-grid="columns: 12; gutters-row: true">
+              <li class="resource-list__item" data-grid-item="width: 4;">
       <div class="card card--in-grid">
-        <div class="webinar-list__header card__header ">
-          <h3 class="webinar-list__title h3">Taking a Trauma-Informed Approach with Events of Escalation</h3>
+        <div class="resource-list__header card__header ">
+          <h3 class="resource-list__title h3">Taking a Trauma-Informed Approach with Events of Escalation</h3>
         </div>
         <div class="card__body">
-          <img class="webinar-list__image" src="images/icon-webinar.svg" role="presentation" alt="">
+          <img class="resource-list__image" src="images/icon-webinar.svg" alt="">
           <p>
             Among individuals experiencing homelessness, there is a high prevalence of complex trauma, chronic health conditions, and serious mental illness. Trauma, compounded with acute health conditions, often impacts an individual’s ability to manage their distress. Join SAMHSA’s Homeless and Housing Resource Center as our panelists explore using trauma-informed, compassionate, and respectful de-escalation techniques when aiding participants and staff during and after events of escalation.
           </p>
@@ -148,13 +148,13 @@
         </div>
       </div>
     </li>
-              <li class="webinar-list__item" data-grid-item="width: 4;">
+              <li class="resource-list__item" data-grid-item="width: 4;">
       <div class="card card--in-grid">
-        <div class="webinar-list__header card__header ">
-          <h3 class="webinar-list__title h3">Street Medicine for Unsheltered Individuals: Serving People Where They Are</h3>
+        <div class="resource-list__header card__header ">
+          <h3 class="resource-list__title h3">Street Medicine for Unsheltered Individuals: Serving People Where They Are</h3>
         </div>
         <div class="card__body">
-          <img class="webinar-list__image" src="images/icon-webinar.svg" role="presentation" alt="">
+          <img class="resource-list__image" src="images/icon-webinar.svg" alt="">
           <p>
             According to HUD’s Annual Homeless Assessment Report (AHAR), over 225,000 people experienced unsheltered homelessness on a single night in 2020. Of those individuals, twenty-five percent self-reported having a serious mental illness or chronic substance use condition. Join SAMHSA’s Homeless and Housing Resource Center as our panelists explore the benefits of incorporating mobile psychiatry with street outreach.
           </p>
@@ -187,13 +187,13 @@
         </div>
       </div>
     </li>
-              <li class="webinar-list__item" data-grid-item="width: 4;">
+              <li class="resource-list__item" data-grid-item="width: 4;">
       <div class="card card--in-grid">
-        <div class="webinar-list__header card__header ">
-          <h3 class="webinar-list__title h3">Eviction Prevention and Housing Retention During and After COVID-19</h3>
+        <div class="resource-list__header card__header ">
+          <h3 class="resource-list__title h3">Eviction Prevention and Housing Retention During and After COVID-19</h3>
         </div>
         <div class="card__body">
-          <img class="webinar-list__image" src="images/icon-webinar.svg" role="presentation" alt="">
+          <img class="resource-list__image" src="images/icon-webinar.svg" alt="">
           <p>
             The COVID-19 pandemic has led to economic hardship and housing instability for millions of Americans. With eviction moratoria expected to expire at the end of 2020, individuals and families are at risk of losing their housing.
           </p>
@@ -225,13 +225,13 @@
         </div>
       </div>
     </li>
-              <li class="webinar-list__item" data-grid-item="width: 4;">
+              <li class="resource-list__item" data-grid-item="width: 4;">
       <div class="card card--in-grid">
-        <div class="webinar-list__header card__header ">
-          <h3 class="webinar-list__title h3">Supporting the Mental Health and Treatment Needs of Individuals Experiencing Homelessness During COVID-19</h3>
+        <div class="resource-list__header card__header ">
+          <h3 class="resource-list__title h3">Supporting the Mental Health and Treatment Needs of Individuals Experiencing Homelessness During COVID-19</h3>
         </div>
         <div class="card__body">
-          <img class="webinar-list__image" src="images/icon-webinar.svg" role="presentation" alt="">
+          <img class="resource-list__image" src="images/icon-webinar.svg" alt="">
           <p>
             Throughout the COVID-19 pandemic there has been an increase in mental health and substance use disorders in the United States. Join SAMHSA’s Homeless and Housing Resource Center in exploring equitable and culturally appropriate interventions to engage people experiencing homelessness in treatment and deliver services in non-congregate settings.
           </p>
@@ -266,8 +266,25 @@
     </li>
   </ul>      </div>
       <div class="tabs__panel" id="tabpanel-toolkits" role="tabpanel">
-        <!-- No Content -->
+        <ul class="resource-list reset-list" data-grid="columns: 12; gutters-row: true">
+      <li class="resource-list__item" data-grid-item="width: 4;">
+      <div class="card card--in-grid">
+        <div class="resource-list__header card__header ">
+          <h3 class="resource-list__title h3">Whole-Person Care for People Experiencing Homelessness and Opioid Use Disorder Toolkit: Part&nbsp;I</h3>
+        </div>
+        <div class="card__body">
+          <img class="resource-list__image" src="images/icon-toolkit.svg" alt="">
+          <p>
+            <p>The <em>Whole-Person Care for People Experiencing Homelessness and Opioid Use Disorder Toolkit</em> provides a framework for supporting recovery and housing stability. Part I of the toolkit, released in August 2021, provides an introduction to homelessness, opioid use disorder, and evidence-based recovery practices such as trauma-informed care, motivational interviewing, eliminating stigma, and harm reduction.</p>
+
+          </p>
+          <a class="button" href="files/homelessness-and-opioid-use-disorder-toolkit-part-i-august-2021.pdf" download="Homelessness and Opioid Use Disorder Toolkit Part I August 2021.pdf">
+            Download Toolkit (PDF)
+          </a>
+        </div>
       </div>
+    </li>
+  </ul>      </div>
       <div class="tabs__panel" id="tabpanel-newsletters" role="tabpanel">
         <!-- No Content -->
       </div>
